# kansei_rust

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rust-wasm/: Cargo.toml
rust-wasm/.cargo/: config.toml
rust-wasm/src/: lib.rs
rust-wasm/src/core_engine/: camera.rs  camera_controls.rs  mod.rs  renderer.rs  scene.rs
rust-wasm/src/geometries/: box_geometry.rs  geometry.rs  mod.rs  plane_geometry.rs
rust-wasm/src/math/: matrix4.rs  mod.rs  vector3.rs
rust-wasm/src/objects/: mesh.rs  mod.rs
rust-wasm/src/shaders/: basic.wgsl
src/: main.ts
