[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Element",
    "MouseEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "EventTarget",
    "AddEventListenerOptions"
] }
wgpu = "25"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"

[profile.release]
opt-level = "z"
lto = true
